# ruffle-android

.github/workflows/: build.yml
app/: build.gradle  settings.gradle
app/ruffle/: build.gradle
app/ruffle/src/main/: AndroidManifest.xml
app/ruffle/src/main/java/rs/ruffle/: FullscreenNativeActivity.java  MainActivity.java
app/ruffle/src/main/res/layout/: activity_main.xml  keyboard.xml
app/ruffle/src/main/res/values/: colors.xml
scdl/: Cargo.toml
scdl/src/: download.rs  main.rs
